# crabase

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  REPRO.md  REVIEW.md  TASK.md  flake.nix  smoke_test.sh
.github/workflows/: ci.yml
crates/crabase-py/: Cargo.toml  pyproject.toml
crates/crabase-py/python/crabase/: __init__.py  _crabase.pyi
crates/crabase-py/src/: lib.rs
crates/crabase-py/tests/: conftest.py  test_bindings.py
crates/crabase-py/tests/__snapshots__/: test_bindings.ambr
crates/crabase-py/tests/fixtures/vault/Notes/: alpha.md  beta.md  gamma.md
crates/crabase-py/tests/fixtures/vault/Projects/: project-1.md  project-2.md
crates/crabase-py/tests/fixtures/vault/queries/: notes.base  projects.base
src/: base_file.rs  error.rs  filter.rs  lib.rs  main.rs  output.rs  query.rs  vault.rs
src/expr/: ast.rs  eval.rs  lexer.rs  mod.rs  parser.rs  translate.rs
tests/: integration.rs
tests/fixtures/: backlinks.base  backlinks_links.base  formula_sort_ignored.base  header_aliases.base  implicit_sort.base  is_empty_null.base  name_tiebreak.base  natural_sort.base  neq_null.base  null_arith.base  test.base
tests/snapshots/: integration__backlinks_includes_body_frontmatter_inline_anchor_and_canvas.snap  integration__bare_file_resolves_to_file_path.snap  integration__base_views.snap  integration__column_header_formula_prefix_stripped.snap  integration__contains_any_matches_any_argument.snap  integration__contains_any_returns_false_when_no_match.snap  integration__contains_is_case_insensitive.snap  integration__csv_datetime_cell_uses_iso_t_separator.snap  integration__date_add_days.snap  integration__date_add_months.snap  integration__date_comparison.snap  integration__date_datetime_parse.snap  integration__date_diff_days_property.snap  integration__date_format.snap  integration__date_is_empty.snap  integration__date_iso_t_separated_datetime.snap  integration__date_parse_day.snap  integration__date_parse_month.snap  integration__date_parse_year.snap  integration__date_strip_time.snap  integration__date_sub_date.snap  integration__date_sub_duration.snap  integration__date_wikilink_parse.snap  integration__division_always_returns_float.snap  integration__division_still_works_after_identifier_or_number.snap  integration__ends_with_is_case_insensitive.snap  integration__expression_comparison.snap  integration__expression_string_concat.snap  integration__file_basename_aliases_file_name.snap  integration__file_links_excludes_inline_frontmatter_and_code_regions.snap  integration__file_metadata_column_headers_use_friendly_aliases.snap  integration__file_name_no_extension.snap  integration__filter_node_and.snap  integration__formula_bracket_access.snap  integration__formula_sort_is_ignored_and_null_formula_csv_cell_is_blank.snap  (+31 more)
(+19 files in other folders)
