[package]
authors = ["Simon Zeng <rust@simonzeng.ca>"]
edition = "2024"
# If you change the name here, you must also do it in flake.nix (and run `cargo generate-lockfile` afterwards)
name = "crabase"
description = "Query obsidian bases without obsidian"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "crabase"
path = "src/main.rs"

[lib]
name = "crabase_lib"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3.14", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
polars = { version = "0.46", default-features = false, features = [
    "lazy",
    "strings",
    "regex",
    "temporal",
    "dtype-date",
    "dtype-datetime",
    "dtype-duration",
    "list_eval",
    "list_any_all",
    "list_count",
    "list_gather",
    "concat_str",
    "is_in",
    "rows",
    "fmt",
    "round_series",
    "abs",
    "log",
    "string_pad",
    "string_reverse",
    "dtype-struct",
    "offset_by",
    "replace",
] }
toon-format = "0.5.0"
serde_json = "1"

[dev-dependencies]
insta = "1"
proptest = "1"
